--- a/source/fpreport2src/fpr2src_exporter_main.lfm
+++ b/source/fpreport2src/fpr2src_exporter_main.lfm
@@ -7,18 +7,6 @@ object Frmfpr2src: TFrmfpr2src
   ClientHeight = 407
   ClientWidth = 654
   Menu = MainMenu1
-  object BuStreamer: TButton
-    AnchorSideLeft.Control = EdtDest
-    AnchorSideTop.Control = EdtDest
-    AnchorSideTop.Side = asrBottom
-    Left = 10
-    Height = 25
-    Top = 76
-    Width = 131
-    Action = ActConvertStreamer
-    BorderSpacing.Top = 15
-    TabOrder = 0
-  end
   object EdtSrc: TEdit
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = Owner
@@ -31,7 +19,7 @@ object Frmfpr2src: TFrmfpr2src
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Left = 10
     BorderSpacing.Top = 5
-    TabOrder = 1
+    TabOrder = 0
     Text = './demo01.json'
   end
   object EdtDest: TEdit
@@ -46,7 +34,7 @@ object Frmfpr2src: TFrmfpr2src
     Width = 644
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Top = 10
-    TabOrder = 2
+    TabOrder = 1
     Text = './demo1.pas'
   end
   object StatusBar1: TStatusBar
@@ -71,7 +59,6 @@ object Frmfpr2src: TFrmfpr2src
   end
   object Memo1: TMemo
     AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = BuStreamer
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
@@ -85,12 +72,11 @@ object Frmfpr2src: TFrmfpr2src
     Lines.Strings = (
       'Memo1'
     )
-    TabOrder = 4
+    ScrollBars = ssBoth
+    TabOrder = 3
   end
   object BuExporter: TButton
-    AnchorSideLeft.Control = BuStreamer
     AnchorSideLeft.Side = asrBottom
-    AnchorSideTop.Control = BuStreamer
     AnchorSideTop.Side = asrCenter
     Left = 156
     Height = 25
@@ -98,15 +84,11 @@ object Frmfpr2src: TFrmfpr2src
     Width = 131
     Action = ActConvertExporter
     BorderSpacing.Left = 15
-    TabOrder = 5
+    TabOrder = 4
   end
   object ActionList1: TActionList
     Left = 392
     Top = 152
-    object ActConvertStreamer: TAction
-      Caption = 'Convert Streamer'
-      OnExecute = ActConvertStreamerExecute
-    end
     object ActConvertExporter: TAction
       Caption = 'Convert Exporter'
       OnExecute = ActConvertExporterExecute
@@ -115,9 +97,6 @@ object Frmfpr2src: TFrmfpr2src
   object MainMenu1: TMainMenu
     Left = 471
     Top = 152
-    object MenuItem1: TMenuItem
-      Action = ActConvertStreamer
-    end
     object MenuItem2: TMenuItem
       Action = ActConvertExporter
     end
