Add MRU list Add support for converting LazReports to *.pas files Add (hopefully) all bandtypes

--- a/source/99_fpreport2src/fpr2src_dsgctrl_main.lfm
+++ b/source/99_fpreport2src/fpr2src_dsgctrl_main.lfm
@@ -7,6 +7,8 @@ object Frmfpr2src: TFrmfpr2src
   ClientHeight = 407
   ClientWidth = 654
   Menu = MainMenu1
+  OnClose = FormClose
+  OnCreate = FormCreate
   object EdtSrc: TEdit
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = Owner
